test/tests/compiler/13_floating-point_numbers/invalid_types/extra_credit/bitwise_and.plx
pub fn main(none) i32 {
    #  It's illegal to apply bitwise & to doubles 
    d: f64 = 10.0 & -1
    return 0
}
